[dev]v4.3.1
- ADDED: Computercraft bundled cable compatibility

v4.3.0
- CHANGE: Made volcanoes slightly more rare
- CHANGE: Crafting pipes can craft multiple items
- FIX: Backpack slots being locked
- FIX: Framed alloy wire connection bug
- FIX: Strange tree growth
- FIX: Routing FX
- FIX: Rare lamp render crash when teleporting
- FIX: Backpacks resetting anvil name
- FIX: Recipe mirroring

v4.2.2
- ADDED: Extension pipe
- ADDED: Config option for backpack blacklist
- ADDED: Routing chip upgrades
- ADDED: Link/unlink router effects
- FIX: Redstone propagation bug on certain surfaces
- FIX: Crash when placing lamps under bedrock

v4.2.1
- ADDED: Upgrade system for routing chips
- CHANGE: Optimized lamp halo render
- CHANGE: Buttons can be inverted with shift-right-click
- FIX: Stone walls torch placement
- FIX: Timers getting stuck on world time shifts
- FIX: Crash with pipes in unloaded chunks
- FIX: Gui textures

v4.2.0
- ADDED: ProjectRed: Mechanical package (beta)
- ADDED: Item routing system (beta)
- FIX: Version Checker spam

v4.1.0
- ADDED: Version checker
- ADDED: Option to turn off light halos
- CHANGE: Lights use torch placement rules
- CHANGE: Stained trees can only generate in overworld (too OP)
- FIX: Stained leaf decay
- FIX: Flatland generation
- FIX: Ore recipe for tools

v4.0.5
- ADDED: Ore Dictionary registration for gems
- FIX: Crash when world is not installed.

v4.0.4
- ADDED: Retroactive world generation
- ADDED: Stained trees
- CHANGE: Alloy smelter removed
- CHANGE: Only gates with torches emit light
- FIX: Toggle latch torches being off on placement

v4.0.3
- ADDED: Fixtures
- ADDED: Config option for moving all rendering to TESR
- ADDED: Gates emit light
- FIX: Many minor bugs

v4.0.2
- ADDED: Walls for world gen blocks
- CHANGE: Ported to Minecraft 1.6.4
- CHANGE: Lights render halos in inventory
- CHANGE: Pointer recipe
- FIX: Server crash
- FIX: Analog signal re-propagation
- FIX: Illumar buttons dropping regular buttons